K1J-1594: Add personId to user